feat: prepare for notifications with sse
- freezing this for now. let us make it work first, finaly deploy this
  project to aws lambda, be proud of https and then come back to
  notification driver design when comunicating between go server and
  ss-api

--- a/web/v2/ui/components/invoices.templ
+++ b/web/v2/ui/components/invoices.templ
@@ -60,7 +60,7 @@ templ InvoiceCard(i *models.Invoice) {
 				}
 				title="Baixar"
 			>
-				@shared.DefaultButton("xs") {
+				@shared.DarkButton("xs") {
 					@shared.IconSm("download-cloud")
 				}
 			</a>
