--- a/web/v2/ui/components/invoices-print.templ
+++ b/web/v2/ui/components/invoices-print.templ
@@ -40,9 +40,9 @@ templ InvoicePrintCard(p *models.InvoicePrint) {
 		</h3>
 		<ul class="flex flex-col gap-1 p-2 pb-0 sm:w-10/12 md:w-9/12">
 			<li class="md:truncate"><span class="font-medium">Entidade:</span> { p.Entity.Name }</li>
-			<li class="md:truncate"><span class="font-medium">Número / Protocolo:</span> { p.InvoiceID } </li>
+			<li class="md:truncate"><span class="font-medium">Nº / Protocolo:</span> { p.InvoiceID } </li>
 		</ul>
-		<div class="grid grid-cols-6 gap-2 p-2 sm:absolute sm:bottom-2 sm:right-2 sm:grid-cols-2 sm:p-0">
+		<div class="grid grid-cols-6 gap-2 p-2 sm:absolute sm:bottom-2 sm:right-2 sm:grid-cols-3 sm:p-0">
 			<div
 				onclick={ scripts.OpenDialog(printingDetailsDialogTarget(p)) }
 				title="Ver detalhes"
@@ -62,6 +62,16 @@ templ InvoicePrintCard(p *models.InvoicePrint) {
 					@shared.IconSm("edit")
 				}
 			</div>
+			<a
+				if p.InvoicePDF != "" {
+					href={ templ.URL(p.InvoicePDF) }
+				}
+				title="Baixar"
+			>
+				@shared.DarkButton("xs") {
+					@shared.IconSm("download-cloud")
+				}
+			</a>
 		</div>
 		@PrintingDetailsDialog(p)
 	</li>
