--- a/web/v2/ui/forms/metrics.templ
+++ b/web/v2/ui/forms/metrics.templ
@@ -14,7 +14,7 @@ templ MetricsForm(m *models.Metrics, entities []*models.Entity) {
 		hx-swap="outerHTML"
 	>
 		<div class="md:w-fit">
-			@shared.SubmitButton("sm") {
+			@shared.SubmitInfoButton("sm") {
 				@shared.Icon("play-circle")
 				<span>Iniciar Cálculo de Métricas</span>
 			}
