--- a/web/v2/ui/pages/invoices.templ
+++ b/web/v2/ui/pages/invoices.templ
@@ -45,7 +45,7 @@ templ ChooseInvoiceOperationPage() {
 			}
 		</a>
 		<a href="/invoices/print">
-			@shared.DefaultButton("md") {
+			@shared.DarkButton("md") {
 				@shared.Icon("printer")
 				<span>Impressão</span>
 			}
