--- a/web/v2/ui/components/invoices-cancel.templ
+++ b/web/v2/ui/components/invoices-cancel.templ
@@ -84,7 +84,7 @@ templ CancelingDetailsDialog(c *models.InvoiceCancel) {
 			</div>
 			if c.ReqStatus != "pending" && c.ReqMsg != "" {
 				<div class="border-b p-2 text-base">
-					<pre>{ c.ReqMsg }</pre>
+					<pre class={ shared.GetTextColorByOperationStatus(c) }>{ c.ReqMsg }</pre>
 				</div>
 			}
 			<ul class="grid gap-2 p-2 sm:grid-cols-2">
