--- a/web/v2/ui/components/invoices.templ
+++ b/web/v2/ui/components/invoices.templ
@@ -91,7 +91,7 @@ templ InvoiceDetailsDialog(i *models.Invoice) {
 			</div>
 			if i.ReqStatus != "pending" && i.ReqMsg != "" {
 				<div class="border-b p-2 text-base">
-					<pre>{ i.ReqMsg }</pre>
+					<pre class={ shared.GetTextColorByOperationStatus(i) }>{ i.ReqMsg }</pre>
 				</div>
 			}
 			<ul class="grid gap-2 p-2 sm:grid-cols-2">
@@ -109,6 +109,7 @@ templ InvoiceDetailsDialog(i *models.Invoice) {
 				<li><span class="font-medium">GTA:</span> { i.Gta } </li>
 				<li><span class="font-medium">Prefixo do nome do arquivo:</span> { i.CustomFileNamePrefix } </li>
 				<li><span class="font-medium">Nome completo do arquivo:</span> { i.FileName } </li>
+				<li class="col-span-2"><span class="font-medium">Informações Complementares:</span> { i.ExtraNotes } </li>
 			</ul>
 			@InvoiceItemsDetails(i)
 		</div>
@@ -179,9 +180,9 @@ templ CancelingConfirmationDialog(i *models.Invoice) {
 	<dialog id={ cancelingConfirmationDialogID(i) } class="rounded sm:w-3/4 md:w-3/5 lg:w-1/2 xl:w-1/3 2xl:w-1/4">
 		<div class="rounded border border-gray-200 p-4 shadow shadow-gray-300">
 			<h3 class="text-center text-xl font-bold">Quer mesmo cancelar a nota fiscal?</h3>
-			<p class="pb-4 pt-2 text-center text-sm text-gray-700">Isso irá iniciar uma operação de cancelamento de NFA no Siare.</p>
+			<p class="pb-4 pt-2 text-center text-sm text-gray-700">Isso irá iniciar uma operação de cancelamento de NFA no Siare. A justificativa será "A nota possui dados incorretos".</p>
 			<div class="grid grid-cols-2 gap-2">
-				<div hx-post={ fmt.Sprintf("/invoices/cancel/%d", i.ID) }>
+				<div hx-post={ fmt.Sprintf("/invoices/cancel/%d", i.ID) } onclick={ scripts.CloseDialog(cancelingConfirmationDialogTarget(i)) }>
 					@shared.ErrorButton("md") {
 						Sim
 					}
