--- a/web/v2/ui/components/metrics.templ
+++ b/web/v2/ui/components/metrics.templ
@@ -185,6 +185,23 @@ templ MetricsResultsDetails(m *models.Metrics) {
 	</div>
 }
 
+templ DownloadInvoiceFromMetricsRecordButton(r *models.MetricsResult) {
+	<a
+		if r.InvoicePDF != "" {
+			href={ templ.URL(r.InvoicePDF) }
+		} else {
+			hx-post={ fmt.Sprintf("/invoices/print/%d/%s/%d", r.ID, r.InvoiceNumber, r.EntityID) }
+			hx-swap="none"
+		}
+		title="Baixar NFA"
+		class="absolute right-4 top-2 sm:col-span-2 lg:col-span-3"
+	>
+		@shared.DefaultButton("xs") {
+			@shared.IconSm("download-cloud")
+		}
+	</a>
+}
+
 templ MetricsResultData(r *models.MetricsResult) {
 	<ul class="grid grid-cols-1 gap-2 p-4 sm:grid-cols-2 xl:grid-cols-3">
 		if r.Type == "record" {
@@ -197,11 +214,7 @@ templ MetricsResultData(r *models.MetricsResult) {
 			<li>
 				<strong>Data de emissão</strong>: <span>{ utils.FormatDateAsBR(r.IssueDate) } </span>
 			</li>
-			<div class="absolute right-4 top-2 sm:col-span-2 lg:col-span-3">
-				@shared.DefaultButton("xs") {
-					@shared.IconSm("download-cloud")
-				}
-			</div>
+			@DownloadInvoiceFromMetricsRecordButton(r)
 		} else {
 			<li>
 				<strong>Lucro total</strong>: <span class="text-green-600">R$ { r.TotalIncome }</span>
