--- a/web/v2/ui/components/metrics.templ
+++ b/web/v2/ui/components/metrics.templ
@@ -196,7 +196,7 @@ templ DownloadInvoiceFromMetricsRecordButton(r *models.MetricsResult) {
 		title="Baixar NFA"
 		class="absolute right-4 top-2 sm:col-span-2 lg:col-span-3"
 	>
-		@shared.DefaultButton("xs") {
+		@shared.DarkButton("xs") {
 			@shared.IconSm("download-cloud")
 		}
 	</a>
