--- a/web/v2/ui/layouts/base.templ
+++ b/web/v2/ui/layouts/base.templ
@@ -1,8 +1,9 @@
 package layouts
 
 import "github.com/cayo-rodrigues/nff/web/ui/shared"
+import "github.com/cayo-rodrigues/nff/web/utils"
 
-templ Base(page templ.Component, isAuthenticated bool) {
+templ Base(page templ.Component) {
 	<!DOCTYPE html>
 	<html lang="pt-br">
 		<head>
@@ -24,7 +25,7 @@ templ Base(page templ.Component, isAuthenticated bool) {
 			class="flex h-screen flex-col overflow-y-scroll bg-gray-50 text-sm"
 		>
 			<header>
-				@shared.Nav(isAuthenticated)
+				@shared.Nav(utils.GetUserData(ctx).IsAuthenticated)
 			</header>
 			<main id="main" class="flex-1 px-4 pb-20 pt-4 sm:px-8 sm:py-6">
 				@page
