--- a/web/v2/ui/shared/notification.templ
+++ b/web/v2/ui/shared/notification.templ
@@ -34,9 +34,9 @@ templ NotificationDialog() {
 			</div>
 		</div>
 		@NotificationList(services.GetNotifications(ctx))
-		<div class="border-t p-2">
+		<div class="sticky bottom-0 border-t bg-white p-2">
 			<div
-				hx-delete="notifications"
+				hx-delete="/notifications"
 				hx-trigger="click"
 				hx-target="#notification-list"
 				hx-swap="innerHTML"
@@ -50,28 +50,23 @@ templ NotificationDialog() {
 	</dialog>
 }
 
-func notificationEventName(ctx context.Context) string {
-	userData := utils.GetUserData(ctx)
-	return fmt.Sprintf("sse:%d:operation-finished", userData.ID)
-}
-
 templ NotificationList(items []*models.Notification) {
 	<ul
-		hx-get="/notifications"
-		hx-trigger={ notificationEventName(ctx) }
+		hx-get="/notifications/latest"
+		hx-trigger={ NotificationEventName(ctx) }
 		hx-target="this"
-		hx-swap="outerHTML"
+		hx-swap="afterbegin"
 		id="notification-list"
 		class="grid grid-cols-1 gap-2 rounded p-2 sm:grid-cols-2 sm:gap-4 lg:grid-cols-3 2xl:grid-cols-4"
 	>
 		for i, item := range items {
-			@NotificationListItem(item, len(items)-i)
+			@NotificationCard(item, len(items)-i)
 		}
 	</ul>
 }
 
-templ NotificationListItem(n *models.Notification, position int) {
-	<li class="relative grid grid-cols-1 gap-2 rounded p-2 shadow shadow-gray-600">
+templ NotificationCard(n *models.Notification, position int) {
+	<li id={ fmt.Sprintf("notification-card-%d", n.ID) } class="relative grid grid-cols-1 gap-2 rounded p-2 shadow shadow-gray-600">
 		<span class="absolute -right-1 -top-1 rounded border border-gray-300 bg-gray-100 px-2 py-1">{ strconv.Itoa(position) }</span>
 		<h3 class="flex items-center gap-2 truncate rounded border border-gray-300 p-2 text-base font-bold">
 			@OperationStatus(n)
@@ -89,4 +84,9 @@ templ NotificationListItem(n *models.Notification, position int) {
 			</li>
 		</ul>
 	</li>
+}
+
+func NotificationEventName(ctx context.Context) string {
+	userData := utils.GetUserData(ctx)
+	return fmt.Sprintf("sse:%d:operation-finished", userData.ID)
 }
