--- a/web/v2/ui/components/invoices.templ
+++ b/web/v2/ui/components/invoices.templ
@@ -22,6 +22,7 @@ templ InvoiceListRow(date string, invoicesOfTheDay []*models.Invoice) {
 	<ul class="grid grid-cols-1 gap-4 py-4 md:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-5">
 		for _, i := range invoicesOfTheDay {
 			@InvoiceCard(i)
+			@shared.OperationCardNotificationListener("invoices", i.ID, invoiceCardTarget(i), i.ReqStatus)
 		}
 	</ul>
 }
@@ -206,6 +207,10 @@ templ CancelingConfirmationDialog(i *models.Invoice) {
 
 func invoiceCardID(i *models.Invoice) string {
 	return fmt.Sprintf("invoice-card-%d", i.ID)
+}
+
+func invoiceCardTarget(i *models.Invoice) string {
+	return fmt.Sprintf("#invoice-card-%d", i.ID)
 }
 
 func invoiceDetailsDialogID(i *models.Invoice) string {
