--- a/web/v2/ui/pages/invoices.templ
+++ b/web/v2/ui/pages/invoices.templ
@@ -7,7 +7,7 @@ import "github.com/cayo-rodrigues/nff/web/ui/components"
 templ InvoicesPage(invoicesByDate []map[string][]*models.Invoice) {
 	<div class="flex flex-col gap-3">
 		<div class="flex flex-col gap-2 border-b pb-3 sm:flex-row">
-			<dialog id="invoice-form-dialog" class="m-auto h-full w-full rounded bg-gray-50">
+			<dialog id="invoice-form-dialog" class="m-auto h-full w-full rounded bg-gray-50 shadow shadow-gray-600">
 				<div id="invoice-form-dialog-content" class="p-4"></div>
 			</dialog>
 			<div
