--- a/web/v2/ui/shared/operation.templ
+++ b/web/v2/ui/shared/operation.templ
@@ -39,15 +39,15 @@ templ OperationStatus(o Operation) {
 func GetTextColorByOperationStatus(o Operation) string {
 	switch o.GetStatus() {
 	case "success":
-		return "text-green-700"
+		return "text-green-700 whitespace-pre-wrap"
 	case "warning":
-		return "text-yellow-700"
+		return "text-yellow-700 whitespace-pre-wrap"
 	case "error":
-		return "text-red-700"
+		return "text-red-700 whitespace-pre-wrap"
 	case "canceled":
-		return "text-gray-600"
+		return "text-gray-600 whitespace-pre-wrap"
 	default:
-		return ""
+		return "whitespace-pre-wrap"
 	}
 }
 
